--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"FSeidler1_Testat_SAD" /o:"fseidler1" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet restore ./source/CarRent_Testat_SAD
-          dotnet build --no-restore ./source/CarRent_Testat_SAD
-          dotnet test --no-build --verbosity normal ./source/CarRent_Testat_SAD
+          dotnet restore ./CarRent_Testat_SAD
+          dotnet build --no-restore ./CarRent_Testat_SAD
+          dotnet test --no-build --verbosity normal ./CarRent_Testat_SAD
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
